added two tools for text compare and json formatter

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/diff": "^7.0.2",
+    "diff": "^8.0.2",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
